           adrena (requires etpubclient >= 20070819)
* tijmen:  added !gib -1|all, which gibs every player in the game
* tijmen:  added !panzer and !sniperwar, which was finished by Elf Friend
* tijmen:  added custom voicechats, made by Elf Friend
           command: g_customVoiceChats
* quad:    added GeoIP country flags in scoreboard, made by mcwf
           g_scoreboard_cf / cg_scoreboard_cf
* quad:    backstab works on wounded players (instant gib) by Elf
* quad:    added panzer/rifle/sniper war by Elf (was missing from the sources)
           also !panzer, !sniper, !riflewar, and !giba, !splat, !splata
* quad:    added a patch from redeye, with some fixes, greeting sound,
           some shrubbot commands, and others.
* quad:    g_noSkillUpgrades, and the changes yada made to the /ref system
           renamed g_scoreboard_cf to g_countryFlags (and cg_countryFlags too)
* quad:    added foxX's code for ready icon
* quad:    partial support for ETTV, also fix for Ticket #5
           fix for Ticket #10 by RedEye
* flms:    added g_spawnInvulFair by PCR
* drevil:  added support for Omni-bot 0.7
* flms:    allow negative shrubbot levels
* quad:    added more control over "energy" ( class weapon time ) via cvar
           g_chargeType
* flms:    added g_flushItems (NQ)
* flms:    mg's can make headshots
* flms:    you also hear hitsounds when Friendly Fire is off and 
           g_reflectFriendlyFire is on
* flms:    mg's can reload midclip* quad:    Lua API for ETPub, aiming for compatibility with ETPro 
           http://wolfwiki.anime.net/index.php/Lua_Mod_API (TODO: Docs!)
* stephan: added an oversized userinfo check to g_spoofOptions flag 256 and
           added the \n char to the list of characters that may not be used in
           a userinfo string. A user with any of the forbidden chars in his/her
           userinfo will be dropped from the server from now on
* quad:    added sv_maxConnsPerIP as a prevention for fakeplayer DoS attack
