@@ -19,7 +19,6 @@ set sv_wwwDlDisconnected 0
 set sv_wwwFallbackURL ""
 set sv_fullmsg "Server is full."
 set sv_hostname "ETHost"
-set sv_maxConnsPerIP 4
 set server_motd0 " ^NEnemy Territory ^7MOTD "
 set server_motd1 ""
 set server_motd2 ""
@@ -285,6 +284,8 @@ set g_antiwarp 1
 set g_healthSpeedStart 0.0
 set g_healthSpeedBottom 50.0
 set g_damageBonus 20.0
+set g_damageBonusNearMedics 0
+set g_damageBonusTotalMedics 0
 set g_sniperwar 0
 set g_panzerwar 0
 set g_riflewar 0
@@ -293,6 +294,7 @@ set g_noSkillUpgrades 0
 set g_countryFlags 1
 set g_chargeType 2
 set g_flushItems 1
+set g_maxConnsPerIP 4
 
 exec campaigncycle.cfg
 set com_watchdog 60
